Added Role-Based Authentication User/Admin

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://rmarcovistar_db_user:hlLC3YzuJfWNq3cN@cluster0.7vkrmdl.mongodb.net/sensor_values?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
+JWT_SECRET  = secret123
